# ai-employment-agent

./: .gitignore  README.md  READMR.md
ai-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-agent/api/: main.py
ai-agent/api/routers/: aiChat.py  entrysheet.py  job_search.py  job_searcher.py  search_offers.py  sheet_generator.py
ai-agent/api/services/: db_service.py  db_test.py  entrysheet.py  gemini.py  job_search.py  job_searcher.py  markdown.py  search_offers.py  sheet_generator.py
ai-agent/models/: base.py  entrysheet.py  job_offer.py  job_search.py  message.py  user.py
docs/: Gemini.md  LiveKitAgent.md  README.md  tech-blog.md
frontend/: .env.example  components.json  package.json
frontend/src/apis/: aiChatApi.ts  aiRealTimeTalkApi.ts  entrySheetApi.ts  jobSearchApi.ts  messageApi.ts  userApi.ts  userWorkProfileApi.ts  voiceVoxApi.ts
frontend/src/components/no-ssr/: NoSSRWrapper.tsx
frontend/src/constants/: env.ts  systemPrompt.ts
frontend/src/hooks/: use-toast.ts  useGoogleLogin.ts  useUserInformation.ts
frontend/src/libs/: supabase.ts  voiceVoxClient.ts
frontend/src/pages/: _app.tsx
frontend/src/pages/entry-sheet/: index.tsx
frontend/src/pages/job-search/: index.tsx
frontend/src/pages/user-work-profile/: index.tsx
frontend/src/stores/: message.ts  userWorkProfile.ts
frontend/src/styles/: globals.css
server/: .env.local  .gitignore  README.md  package.json
server/src/: index.ts
server/src/libs/: geminiLangChain.ts
server/src/logic/: aiCareerAgent.ts
voice-vox/: docker-compose.yml
(+67 files in other folders)
