[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["Pyupyumaru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
google-genai = "^0.6.0"
python-dotenv = "^1.0.1"
websockets = "^14.2"
supabase = "^2.13.0"
pydantic = {version = "^2.10.6", extras = ["email"] }
vertexai = "^1.71.1"
mdutils = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
